fixed landscape layout issue

--- a/assets/base.css
+++ b/assets/base.css
@@ -186,7 +186,7 @@ a {
 
 }
 
-@media (max-width: 700px) {
+@media (max-width: 740px) {
 
   .wrapper {
     padding-bottom: 0;
